# graphite-image-ticket-to-calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_hitl.py  chat.html  chat_hitl.html  docker-compose.yml  pyproject.toml  test.py
assistant/: additional_functions.py  image_to_calendar_agent.py  image_to_calendr_hitl.py
grafi_dist/: grafi-0.0.1-py3-none-any.whl
image_to_calendar/: app.py
image_to_calendar/assistant/: image_to_calendar_agent.py
