[tool.poetry]
name = "graphite-demo-email-processor"
version = "0.1.0"
description = "Email processor with Graphite"
authors = ["Your Name <you@example.com>"]
license = "Mozilla Public License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
grafi = { path = "grafi_dist/grafi-0.0.1-py3-none-any.whl" }
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
requests = "^2.32.3"
onnxruntime = "1.19.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

